--- a/index.html
+++ b/index.html
@@ -16,6 +16,198 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <header class="header">
+      <div class="header__contenedor">
+        <div class="header__barra">
+          <div class="header__logo">
+            <img src="img/logo.svg" alt="" />
+          </div>
+          <nav class="navegacion">
+            <a href="#" class="navegacion__link navegacion__link--blanco"
+              >¿que es?</a
+            >
+            <a href="#" class="navegacion__link navegacion__link--blanco"
+              >¿como funciona?</a
+            >
+            <a href="#" class="navegacion__link navegacion__link--blanco"
+              >precios</a
+            >
+            <a href="#" class="navegacion__link navegacion__link--blanco"
+              >constacto</a
+            >
+          </nav>
+        </div>
+        <div class="header__grid">
+          <div class="header__texto">
+            <h1 class="header__heading">
+              Recibe y realiza pagos en tu celular con nucleus
+            </h1>
+            <a href="#" class="header__boton">Obtener cuenta</a>
+          </div>
+          <div class="header__grafico">
+            <img
+              class="header__imagen"
+              src="img/app_1.svg"
+              alt="Imagen de nucleus app"
+            />
+          </div>
+        </div>
+      </div>
+    </header>
+    <main class="nucleus">
+      <h2 class="nucleus__heading">Que es ?</h2>
+      <div class="nucleus__contenedor">
+        <div class="nucleus__grid">
+          <div class="nucleus__imagen">
+            <img src="img/app_2.svg" alt="app nucleus" />
+          </div>
+          <div class="listado">
+            <div class="listado__elemento">
+              <h2 class="listado__heading">Facil</h2>
+              <p class="listado__texto">
+                Crea una cuenta, envia tu documentacion y comienza a utilizar
+                nucleus en un par de minutos
+              </p>
+            </div>
+            <!--Elemento dentro de la lista-->
+            <div class="listado__elemento">
+              <h2 class="listado__heading">Seguro</h2>
+              <p class="listado__texto">
+                Por su tecnologia de cadena de bloques es rapido y seguro.
+              </p>
+            </div>
+            <!--Elemento dentro de la lista-->
+            <div class="listado__elemento">
+              <h2 class="listado__heading">Administrable</h2>
+              <p class="listado__texto">
+                A;ade otransfiere de tu banco a;ade limites y controla tus
+                gastos
+              </p>
+            </div>
+            <!--Elemento dentro de la lista-->
+          </div>
+        </div>
+      </div>
+    </main>
+    <section class="seguridad">
+      <div class="seguridad__contenedor">
+        <h2 class="seguridad__heading">Nucleus es seguro</h2>
+        <div class="seguridad__grid">
+          <div class="seguridad__listado">
+            <div class="listado__elemento">
+              <p class="listado__texto">Imposible de clonar</p>
+            </div>
+            <!--Elemento dentro de la lista-->
+            <div class="listado__elemento">
+              <p class="listado__texto">
+                Utiliza tu cara o tu dedo para autorizar todas tus transacciones
+              </p>
+            </div>
+            <!--Elemento dentro de la lista-->
+            <div class="listado__elemento">
+              <p class="listado__texto">
+                paga en los establecimientos registrados
+              </p>
+            </div>
+            <!--Elemento dentro de la lista-->
+          </div>
+          <div class="seguridad__imagen">
+            <img src="img/seguridad.png" alt="seguridad en nucleus" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="comisiones">
+      <div class="comisiones__contenedor">
+        <h2 class="comisiones__heading">Comisiones</h2>
+        <div class="comisiones__grid">
+          <div class="comisiones__contenido">
+            <p class="comisiones__texto">
+              Mientras mas utilices necleus, menos pagas
+            </p>
+            <div class="listado">
+              <div class="listado__elemento listado__elemento--2col">
+                <p class="listado__numero">3%</p>
+                <p class="listado__texto">
+                  de todas tus transaciones , si tus movimientos son menosres a
+                  $999.00 USD
+                </p>
+              </div>
+              <!--Termnina elemento-->
+              <div class="listado__elemento listado__elemento--2col">
+                <p class="listado__numero">1.5%</p>
+                <p class="listado__texto">
+                  de todas tus transaciones , si tus movimientos son mayores a
+                  $999.00 USD
+                </p>
+              </div>
+              <!--termina elemento-->
+            </div>
+          </div>
+          <div class="comisiones__img">
+            <img src="img/app_3.svg" alt="Comisiones" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="testimoniales">
+      <div class="testimoniales__contenedor">
+        <h2 class="testimoniales__heading">Testimonios</h2>
+        <div class="testimoniales__grid">
+          <div class="testimonial">
+            <p class="testimonial__texto">
+              Exelente app, muy sencilla de manjear y enviar dinero
+            </p>
+            <p class="testimonial__author">Sergio Anastacio Angulo Rosales</p>
+          </div>
+          <div class="testimonial">
+            <p class="testimonial__texto">
+              Exelente app, muy sencilla de manjear y enviar dinero
+            </p>
+            <p class="testimonial__author">Sergio Anastacio Angulo Rosales</p>
+          </div>
+          <div class="testimonial">
+            <p class="testimonial__texto">
+              Exelente app, muy sencilla de manjear y enviar dinero
+            </p>
+            <p class="testimonial__author">Sergio Anastacio Angulo Rosales</p>
+          </div>
+          <div class="testimonial">
+            <p class="testimonial__texto">
+              Exelente app, muy sencilla de manjear y enviar dinero
+            </p>
+            <p class="testimonial__author">Sergio Anastacio Angulo Rosales</p>
+          </div>
+          <div class="testimonial">
+            <p class="testimonial__texto">
+              Exelente app, muy sencilla de manjear y enviar dinero
+            </p>
+            <p class="testimonial__author">Sergio Anastacio Angulo Rosales</p>
+          </div>
+          <div class="testimonial">
+            <p class="testimonial__texto">
+              Exelente app, muy sencilla de manjear y enviar dinero
+            </p>
+            <p class="testimonial__author">Sergio Anastacio Angulo Rosales</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer__contenedor">
+        <div class="footer__grid">
+          <div class="footer__logo">
+            <img src="img/logo-blanco.svg" alt="logo blanco nucleus" />
+          </div>
+          <nav class="navegacion">
+            <a href="#" class="navegacion__link">¿que es?</a>
+            <a href="#" class="navegacion__link">¿como funciona?</a>
+            <a href="#" class="navegacion__link">precios</a>
+            <a href="#" class="navegacion__link">constacto</a>
+          </nav>
+        </div>
+      </div>
+    </footer>
     <script src="/js/index.js"></script>
   </body>
 </html>
