fix_footer_nav_color

--- a/index.html
+++ b/index.html
@@ -200,10 +200,18 @@
             <img src="img/logo-blanco.svg" alt="logo blanco nucleus" />
           </div>
           <nav class="navegacion">
-            <a href="#" class="navegacion__link">¿que es?</a>
-            <a href="#" class="navegacion__link">¿como funciona?</a>
-            <a href="#" class="navegacion__link">precios</a>
-            <a href="#" class="navegacion__link">constacto</a>
+            <a href="#" class="navegacion__link navegacion__link--blanco"
+              >¿que es?</a
+            >
+            <a href="#" class="navegacion__link navegacion__link--blanco"
+              >¿como funciona?</a
+            >
+            <a href="#" class="navegacion__link navegacion__link--blanco"
+              >precios</a
+            >
+            <a href="#" class="navegacion__link navegacion__link--blanco"
+              >constacto</a
+            >
           </nav>
         </div>
       </div>
